# play_routes_compiler_cli

./: .travis.yml  WORKSPACE  play_routes_compiler_cli_maven_install.json  play_routes_compiler_cli_test_maven_install.json  test_workspace.bzl  version_from_env.bzl  workspace.bzl
.github/workflows/: ci.yml
play-routes-compiler/: BUILD.bazel
scripts/: publish.sh
test/: run_all_tests.sh
