load("@rules_scala_annex//rules:scala.bzl", "scala_binary")
load("@bazel-common//tools/maven:pom_file.bzl", "pom_file")
load("@compiler-cli-version//:version.bzl", "VERSION")

scala_binary(
  name = "play-routes-compiler",
  srcs = glob(["src/main/**/*.scala"]),
  visibility = ["//visibility:public"],
  scalacopts = ["-Ywarn-unused-import"],
  main_class = "rulesplayroutes.routes.CommandLinePlayRoutesCompiler",
  deps = [
    "@play_routes_compiler_cli_maven//:com_typesafe_play_routes_compiler_2_11",
    "@play_routes_compiler_cli_maven//:com_github_scopt_scopt_2_11",
    "@play_routes_compiler_cli_maven//:org_scala_lang_scala_reflect",
  ],
)

compiler_cli_version = VERSION

pom_file(
  name = "pom",
  targets = [":play-routes-compiler"],
  template_file = "pom.template.xml",
  substitutions = {"VERSION": compiler_cli_version}
)
